# plr-mcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hardware-bringup.md
evals/: README.md  plr_mcp_eval.xml
examples/: smoke_test.py
plr_mcp/: __init__.py  analysis.py  lab.py  protocols.py  schemas.py  server.py
tests/: test_lab.py
