[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plr-mcp"
version = "0.1.0"
description = "Model Context Protocol server for PyLabRobot: drive liquid handlers, plate readers, thermocyclers, and heater-shakers as MCP tools."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "di", email = "di.hu.58ave@gmail.com" }]
keywords = ["mcp", "pylabrobot", "lab-automation", "liquid-handling", "hamilton"]
dependencies = [
    # Lower bound 1.9: structured tool output (outputSchema/structuredContent)
    # lands there. Upper bound <2: the v2 line replaces mcp.server.fastmcp.FastMCP
    # with a new API, so an unpinned install would break the import once v2 is the
    # default on PyPI. Re-validate before widening.
    "mcp>=1.9.0,<2",
    # Upper bound: the zero-motion STAR connect depends on PyLabRobot internals
    # verified on 0.2.x. Re-validate before widening.
    "pylabrobot>=0.2.1,<0.3",
    # schemas.py needs typing_extensions.TypedDict for Pydantic on Python < 3.12
    # (typing.TypedDict raises PydanticUserError there). Ships with pydantic, but
    # declared so the requirement is explicit.
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/di-omics/plr-mcp"

[project.scripts]
plr-mcp = "plr_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["plr_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
